[package]
name = "gb_emu"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winit = "0.28.3"
winit_input_helper = "0.14.0"
gilrs = "0.10.1"
pixels = "0.12.0"

# egui = "*"
# egui-wgpu = "*"
# egui-winit = { version = "*", default-features = false, features = ["links"]}
log = "0.4.17"

[dependencies.simple_logger]
version = "4.1.0"
default-features = false
features = ["colors"]
